# bot-analisa-saham

./: .env.example  .gitignore  .notify_signals.json  README.md  patch.diff  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
backtests/: report_AMMN.json  report_BBCA.json  report_BRPT.json  report_GOTO.json  report_PGAS.json
docs/: strategy.md  telegram_setup.md
docs/systemd/: README.md  bot-analisa-generate.service  bot-analisa-generate.timer  bot-analisa-watch.service
reports/: compare_PGAS_backtest.csv  compare_PGAS_engine.csv
scripts/: __init__.py  debug_signals_bbca.py  fetch_data.py  run_notify.py  verify_env.py  watch_signals.py  watch_signals_live.py
src/bot_analisa/: __init__.py
src/bot_analisa/backtest/: backtest.py  backtester.py
src/bot_analisa/cli/: __init__.py  generate_signals.py  migrate_signals.py  watch_signals.py
src/bot_analisa/data/: __init__.py  cleaner.py  provider.py
src/bot_analisa/indicators/: indicators.py
src/scripts/: compare_engine_vs_backtest.py  run_backtest.py  tune_params.py
tests/: test_backtester.py  test_cleaner.py  test_indicators.py  test_indicators_against_ta.py  test_integration_compare.py  test_notify_once.py  test_provider.py  test_risk.py  test_signals.py  test_storage_wrapper.py  test_strategy.py  test_tune_params.py  test_watcher.py
tuning/: tuning_AMMN_20251116T092219Z.csv  tuning_BBCA_20251116T054052Z.csv  tuning_BBCA_20251116T070113Z.csv  tuning_BBCA_20251116T085954Z.csv  tuning_BBCA_20251116T094933Z.csv  tuning_BRPT_20251116T092222Z.csv  tuning_PGAS_20251116T092225Z.csv
(+11 files in other folders)
