[project]
name = "bot-analisa"
version = "0.1.0"
description = "Bot analisa saham Indonesia"
authors = [
    {name="fazulfi"}
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot_analisa*", "scripts*", "*"]
